--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cv2022",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "http://jpledos.github.io/cv",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
