--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cv2022",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://jpledos.github.io/cv",
+  "homepage" : "https://jpledos.github.io/cv/",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
