--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cv2022",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://jpledos.github.io/cv/",
+  "homepage": "https://jpledos.github.io/cv/",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
@@ -10,10 +10,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.1",
+    "html2pdf.js": "^0.10.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-html2pdf": "^1.0.1",
     "react-scripts": "^2.1.3",
+    "react-to-pdf": "^0.0.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
